--- a/src/SecondSectionHome.css
+++ b/src/SecondSectionHome.css
@@ -36,6 +36,7 @@
   width: 100%;
   margin-top: 72px;
   flex-wrap: wrap;
+  gap: 20px;
 }
 
 @media only screen and (max-width: 917px) {
